--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,15 @@
     <input type="text" id="search-box" />
     <ul class="country-list"></ul>
     <div class="country-info"></div>
-
+    <form class="search-form" id="search-form">
+      <input
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+      <button type="submit">Search</button>
+    </form>
     <script src="index.js" type="module"></script>
   </body>
 </html>
